--- a/CSS/webForMobile/index.html
+++ b/CSS/webForMobile/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>一个涉及微信支付的页面</title>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -45,6 +46,22 @@
             <div class="footer"></div>
         </div>
     </div>
+    <script>
+        var oType = document.querySelectorAll('.item-price');
+        // console.log(oType);
+        for (let i = 0; i < oType.length; i++) {
+            oType[i].addEventListener('click',function(){
+                for(let j of oType){
+                    j.classList.remove('active')
+                }
+                this.classList.add('active')
+            })
+        }
+
+
+
+
+    </script>
 </body>
 
 </html>
