--- a/algorithm/hongbao/index.html
+++ b/algorithm/hongbao/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <input type="text" id="money"/>
+  <input type= id="money"/>
   <script>
   // JS 是单线程, 事件是异步的， 
   // 事件处理函数肯定注册在哪里？ 
