--- a/CSS/netease-music-summary/index.html
+++ b/CSS/netease-music-summary/index.html
@@ -20,9 +20,10 @@
             <div class="swiper-slide">
                 slide-1
             </div>
+
             <div class="swiper-slide">
                 <div class="view special">
-                    <div class="art">
+                    <div class="art1">
                         <div class="swing">
                             <div class="leg2">
                                 <div class="jiojio"></div>
@@ -39,11 +40,66 @@
                 </div>
                 slide-2
             </div>
-            <div class="swiper-slide">
-                slide-3
+            <div class="m-reportcontent f-page">
+                <div class="swiper-slide m-page m-page-14 f-page z-enter">
+                    <div class="bg f-page"></div>
+                    <div class="art j-art14" style="transform:scale(0.522667);">
+                        <div class="lines"></div>
+                        <div class="manwrap">
+                            <div class="shoubi"></div>
+                            <div class="man"></div>
+                            <div class="tou"></div>
+                        </div>
+                        <div class="notes"></div>
+                    </div>
+                    <div class="content">
+                        <h4 class="tt para f-animLineUp" style="transition-delay:0.2s;">2019,这些是TA最爱的歌</h4>
+                        <div class="paras">
+                            <p class="para f-animLineUp" style="transition-delay:0.3s;"><span class="f-trunk">《绿色</span>
+                            </p>
+                            <p class="para f-animLineUp" style="transition-delay:0.4s;"><span class="f-trunk">《出山</span>
+                            </p>
+                            <p class="para f-animLineUp" style="transition-delay:0.5s;"><span
+                                    class="f-trunk">《起风了</span>
+                            </p>
+                            <p class="para f-animLineUp" style="transition-delay:0.6s;"><span
+                                    class="f-trunk">《爱情转移</span>
+                            </p>
+                            <p class="para f-animLineUp" style="transition-delay:0.7s;"><span class="f-trunk">《够钟</span>
+                            </p>
+                            <p class="para f-animLineUp" style="transition-delay:0.8s;"><span
+                                    class="f-trunk">《你的酒馆对我打了烊</span></p>
+                            <p class="para f-animLineUp" style="transition-delay:0.9s;"><span
+                                    class="f-trunk">《明明就</span>
+                            </p>
+                            <p class="para f-animLineUp" style="transition-delay:1.0s;"><span
+                                    class="f-trunk">《喜欢你</span>
+                            </p>
+                            <p class="para f-animLineUp" style="transition-delay:1.1s;"><span class="f-trunk">《鸽子</span>
+                            </p>
+                            <p class="para f-animLineUp" style="transition-delay:1.2s;"><span
+                                    class="f-trunk">《睡公主</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="m-page m-page-end-out f-page">
+                </div>
+                <div class="open-text">
+                    <img
+                        src="//s5.music.126.net/static_public/5c21db8d4684556c72180904/open-text@3x.ff1b135ce9ab5bc79a945c8cf2ed6471.png">
+                </div>
+            </div>
+            <div class="m-btmbar">
+                <div class="inner f-bd">
+                    <a href="javascript:;" class="btn">查看我的年度报告</a>
+                </div>
             </div>
         </div>
     </div>
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
     <script>
         const musicBtn = document.querySelector
