--- a/CSS/DouBan/index.html
+++ b/CSS/DouBan/index.html
@@ -19,7 +19,7 @@
     body{
         /* sans_serif 仿宋字体*/
         font-family:"Helvetica Neue",Arial,sans-serif;
-        margin: 0;
+        margin:0;
         color:#111111;
         font-size: 12px;
         position: relative;
@@ -27,10 +27,10 @@
     }
     .feed-item{
         display: block;  /*行内转块级 这样一个a标签既能达到功能又能作为盒子*/
-        padding: 25px 18px 25px 18px;
+        padding: 25px 18px 25px 0;
         position: relative;
         color: #494949;
-        /* margin-left: 18px; */
+        margin-left: 18px;
 
     }
     .feed-content{
