复习了双飞翼布局和圣杯布局

--- a/float/practice.html
+++ b/float/practice.html
@@ -11,15 +11,58 @@
     margin: 0;
     padding: 0;
 }
+header,footer{
+    text-align: center;
+    width: 100%;
+    background-color:chartreuse;
+
+}
+.content{
+    padding: 0 200px;
+
+}
+.text{
+    text-align: center;
+    font-size: 20px;
+    color: #000;
+}
+.main{
+    float: left;
+    width: 100%;
+    height: 200px;
+    background-color: purple;
+}
+.left{
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    margin-left: -100%;
+    position: relative;
+    left: -200px;
+
+}
+.right{
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-color: aqua;
+    margin-left: -200px;
+    position: relative;
+    left: 200px;
+
+}
+
+
 </style>
 <body>
-    <header>圣杯布局</header>
+    <header>向前就是希望</header>
     <div class="content">
-        <div class="main">main</div>
-        <div class="left">left</div>
-        <div class="right">right</div>
+        <div class="main text">main</div>
+        <div class="left text ">left</div>
+        <div class="right text">right</div>
     </div>
-    <footer>footer</footer>
+    <footer>向后就是绝望</footer>
     
     
 </body>
