--- a/float/index1.html
+++ b/float/index1.html
@@ -48,9 +48,9 @@
             width: 200px;
             height: 100px;
             background-color: aqua;
-            margin-left: -200px;
+            /* margin-left: -200px;
             position: relative;
-            left: 200px;
+            left: 200px; */
         }
         /* .content::after{
             content:"111111";
