--- a/float/index2.html
+++ b/float/index2.html
@@ -35,7 +35,8 @@
       background-color: red;
       margin-left: -100%;
     }
-    .right{float: left;
+    .right{
+      float: left;
       width: 200px;
       height: 200px;
       background-color: purple;
