--- a/float/index1.html
+++ b/float/index1.html
@@ -15,9 +15,14 @@
             width: 100%;
             background-color: #aaa;
         }
+        footer{
+            float: left;
+        }
         .content{
             padding: 0 200px;
-            /* overflow:hidden; */
+            float: left;
+            
+            /* overflow:auto;*/
             /* display: table; */
            
         }
@@ -31,7 +36,7 @@
             float: left;
             width: 100%;
             height: 100px;
-            background-color: #ddd;
+            background-color: black;
 
         }
         .left{
@@ -48,12 +53,12 @@
             width: 200px;
             height: 100px;
             background-color: aqua;
-            /* margin-left: -200px;
+            margin-left: -200px;
             position: relative;
-            left: 200px; */
+            left: 200px; 
         }
-        /* .content::after{
-            content:"111111";
+         /* .content::after{
+            content:"";
             clear:both;
             display: block;
             height: 0;
