--- a/CSS/Douban_pc/index.html
+++ b/CSS/Douban_pc/index.html
@@ -52,7 +52,7 @@
               </li>
               <li>
                   <div class="pic"><a href="#">
-                    <img src="https://pic.36krcnd.com/201903/26083535/w5mhq7ix7fdhmy5a!heading" alt=""></a>
+                    <img src="https://img3.doubanio.com/view/photo/albumcover/public/p2546347736.webp" alt=""></a>
                   </div>
                 </li>
                 <li>
@@ -63,7 +63,7 @@
                   </li>
                   <li>
                       <div class="pic"><a href="#">
-                        <img src="https://pic.36krcnd.com/201903/26083535/w5mhq7ix7fdhmy5a!heading" alt=""></a>
+                        <img src="https://img3.doubanio.com/view/photo/albumcover/public/p2546347736.webp" alt=""></a>
                       </div>
                     </li>
             </ul>
