--- a/design_patterns/factory/index.html
+++ b/design_patterns/factory/index.html
@@ -23,34 +23,34 @@
         BicycleShop.prototype = {
             sellBicycle:function(model){
                 console.log(model);
-                var bicycle;
-            switch(model){
-                    case 'Giant':
-                    bicycle = new Giant();
-                    break;
-                    case 'The Speedster':
-                    bicycle = new Speedster();
-                    break;
-                    case 'UC':
-                    bicycle = new UC();
-                    break;
-                }
-                // Interface.ensureImplements('Bicycle',['assemble','wash']);
-                bicycle.assemble();
-                bicycle.wash();
-                return bicycle;
+            //     var bicycle;
+            // switch(model){
+            //         case 'Giant':
+            //         bicycle = new Giant();
+            //         break;
+            //         case 'The Speedster':
+            //         bicycle = new Speedster();
+            //         break;
+            //         case 'UC':
+            //         bicycle = new UC();
+            //         break;
+            //     }
+            //     // Interface.ensureImplements('Bicycle',['assemble','wash']);
+            //     bicycle.assemble();
+            //     bicycle.wash();
+            //     return bicycle;
             }
         }
 
-        function Giant(){}
-        Giant.prototype.assemble = function(){
-            console.log('组装一下');
-        }
-        Giant.prototype.wash = function(){
-            console.log('清洗一下');
-        }
-        function Speedster(){}
-        function UC(){}
+        // function Giant(){}
+        // Giant.prototype.assemble = function(){
+        //     console.log('组装一下');
+        // }
+        // Giant.prototype.wash = function(){
+        //     console.log('清洗一下');
+        // }
+        // function Speedster(){}
+        // function UC(){}
 
         var californiaCruisers = new BicycleShop();
         var bicycle = californiaCruisers.sellBicycle('Giant');
