--- a/es6/Array-rest-spread/spread.html
+++ b/es6/Array-rest-spread/spread.html
@@ -26,9 +26,24 @@
     // Math.max()
     const math_arr = [89,90,99,45];
 
-    const new_math_arr = [...math_arr];
-    var a = Math.max(new_math_arr);
-    console.log(a);
+    //  const new_math_arr = [...math_arr];
+    //  const c = Math.max(new_math_arr);
+    //  console.log(c);
+
+
+
+
+
+
+    //    const c = Math.max(...math_arr);
+
+    //    var d = math_arr.find(function(ele){
+    //       for(let i=0;i<math_arr.length;i++){
+    //           if(math_arr[i])
+    //       }
+          
+    //    });
+    //    console.log(d);
     
     </script>
 </body>
