--- a/cat-eyes-movie/index.html
+++ b/cat-eyes-movie/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
   <link rel="stylesheet" href="styl.css">
   <title>Document</title>
 </head>
+
 <body>
   <header class="nav">
     <i class="arrow-left"></i>
@@ -45,17 +47,61 @@
                 </div>
               </div>
             </div>
+            <div class="movie-detail">
+              <p class="movie-type"></p>
+              <p class="address-time">
+                <span class="address">zg</span>
+                /
+                <span class="time">111</span>
+                分钟
+
+              </p>
+              <p class="data"></p>
+     
+            </div>
+          </div>
+        </div>
+        <div class="operating flex">
+          <div class="movie-watch flex1" id="movie-watch">
+
+            <img src="./images/heart.png" alt="">
+            <span>想看</span>
+          </div>
+          <div class="movie-mark flex1">
+            <img src="./images/star2.png" alt="">
+            <span>评分</span>
           </div>
         </div>
       </div>
     </section>
+    <section class="section-seperate section-expander">
+      <div class="text-expander" id="text-expander">
+        <div class="text-expander_content close">
+          <p></p>
+        </div>
+        <div class="text-expander_button">
+          <div class="icon-chevron_down"></div>
+        </div>
+      </div>
+
+
+
+    </section>
+    <!-- toast -->
+    <div id="toast">
+      <div class="weui-mask_transparent"></div>
+      <div class="weui-toast">
+        <i class="weui-icon-success-no-circle weui-icon_toast"></i>
+        <p class="weui-toast__content">已标记为想看</p>
+      </div>
+    </div>
   </div>
   <script>
-    (function(){
+    (function () {
       $.ajax({
         url: 'https://easy-mock.com/mock/5ca2c29464930718b239eb94/lm/lvmeng/myMovie-demo',
         type: 'get',
-        success:function(res){
+        success: function (res) {
           console.log(res)
           $('#moviePic').attr('src', './images/header-bg.jpg')
           $('.movie-content .movie-name span').html(res.data.name)
@@ -63,10 +109,17 @@
           star(res.data.star)
           $('.rating-score').html(res.data.grade)
           $('.score-num span').html(res.data.people)
+          $('.movie-type').html(res.data.type)
+          $('.address-time .address').html(res.data.where)
+          $('.address-time .time').html(res.data.time)
+          $('.data').html(res.data.date)
+          $('.text-expander_content p').html(res.data.desc) 
+
+
         }
       })
 
-      function star(e){
+      function star(e) {
         let num = Math.floor(e)
         if (e > num) {
           $('#rating').prepend('<img class="img" src="./images/star-h.png">')
@@ -75,7 +128,36 @@
           $('#rating').prepend('<img class="img" src="./images/star.png">')
         }
       }
+
+      $('#movie-watch').click(function(){
+        if ($(this).hasClass('active')) {
+          $('#movie-watch').removeClass('active')
+          $('#movie-watch img').attr('src', './images/heart.png')
+          $('#toast .weui-toast__content').html('已取消想看')
+        } else {
+          $('#movie-watch').addClass('active')
+          $('#movie-watch img').attr('src', './images/heart1.png')
+          $('#toast .weui-toast__content').html('已标记为想看')
+        }
+        $('#toast').css('display', 'block')
+        setTimeout(() => {
+          $('#toast').css('display', 'none')
+        },1500)
+      })
+      //收放详情
+      $('#text-expander').on('click',function () {
+        if($('.text-expander_content').hasClass('close')){
+          $('.text-expander_content').removeClass('close')
+          $('.icon-chevron_down').addClass('up')
+
+        }else{
+          $('.text-expander_content').addClass('close')
+          $('.icon-chevron_down').removeClass('up')
+          }
+      })
+      
     })()
   </script>
 </body>
+
 </html>
