--- a/cat-eyes-movie/index.html
+++ b/cat-eyes-movie/index.html
@@ -87,6 +87,155 @@
 
 
     </section>
+    <section class="section-seperate">
+      <p class="action-list section-til">演职人员</p>
+      <ul class="movie-celebrities">
+        <!-- <li>
+          <a href="#" class="link">
+            <div class="movie-celebrities__pic">
+              <img src="http://p1.meituan.net/moviemachine/6e06b1eee9a74c9573fdb8150fb8561271624.jpg@130w_180h.webp"
+                alt="">
+            </div>
+            <span class="movie-celebrities-nick">rer</span>
+            <span class="movie-celebrities-roles">sda</span>
+          </a>
+        </li> -->
+      </ul>
+    </section>
+    <!-- section4 -->
+    <section class="movie-booking section-seperate section-expander">
+      <p class="section-til">票房</p>
+      <div class="weui-flex">
+        <div class="weui-flex__item">
+          <div class="placeholder" id="ranking">
+            <span></span>
+            <p>昨日票房排行</p>
+          </div>
+        </div>
+        <div class="weui-flex__item">
+          <div class="placeholder" id="bookingWeek">
+            <span></span>
+            <p>首周票房(万)</p>
+          </div>
+        </div>
+        <div class="weui-flex__item">
+          <div class="placeholder" id="bookingTotal">
+            <span></span>
+            <p>累计票房(万)</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- scetion5 -->
+    <section class="movie-photo section-seperate">
+      <p class="action-list section-til">视频和剧照</p>
+      <ul class="movie-photo__lists">
+        <!-- <li class="stage-img-container">
+          <a href="#" class="link">
+            <div class="movie-celebrities__pic">
+              <img src="http://p0.meituan.net/movie/665a25835d7332d503eb4c018ece473915209.jpg@250w_140h_1e_1c.webp"
+                alt="">
+            </div>
+          </a>
+        </li>
+        <li class="stage-img-container">
+          <a href="#" class="link">
+            <div class="movie-celebrities__pic">
+              <img src="http://p0.meituan.net/movie/665a25835d7332d503eb4c018ece473915209.jpg@250w_140h_1e_1c.webp"
+                alt="">
+            </div>
+          </a>
+        </li> -->
+      </ul>
+    </section>
+    <!-- section6 -->
+    <section class="section-seperate section-expander">
+      <p class="section-til pos_r">讨论
+        <span class="join-comment">参与讨论</span>
+      </p>
+      <ul class="movie-comment">
+        <li class="comment-item">
+          <div class="commit-item__sort">
+            <span>全部</span>
+            <span class="commit-item__sort"></span>
+          </div>
+        </li>
+        <li class="comment-item">
+          <div class="commit-item__sort">
+            <span>好评</span>
+            <span class="commit-item__sort" id="good"></span>
+          </div>
+        </li>
+        <li class="comment-item">
+          <div class="commit-item__sort">
+            <span>差评</span>
+            <span class="commit-item__sort" id="bad"></span>
+          </div>
+        </li>
+        <li class="comment-item">
+          <div class="commit-item__sort">
+            <span>点映</span>
+            <span class="commit-item__sort" id="dy"></span>
+          </div>
+        </li>
+        <li class="comment-item">
+          <div class="commit-item__sort">
+            <span>购票</span>
+            <span class="commit-item__sort" id="bought"></span>
+          </div>
+        </li>
+        <li class="comment-item">
+          <div class="commit-item__sort">
+            <span>认证作者</span>
+            <span class="commit-item__sort" id="author"></span>
+          </div>
+        </li>
+        <li class="comment-item">
+          <div class="commit-item__sort">
+            <span>同城</span>
+            <span class="commit-item__sort" id="sameCity"></span>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <!-- section7 -->
+    <section class="section-seperate section-expander">
+      <p class="section-til">精选</p>
+      <ul class="chosen-comment" id="chosen-comment">
+        <!-- <li class="chosen-comment__item">
+          <div class="item-avatal">
+            <img src="" alt="">
+          </div>
+          <div class="item-detail">
+            <div class="item-detail__hd">
+              <div>
+                <span class="nick-name">dqweqwe</span>
+                <span class="lever">
+                  <img src="" alt="">
+                </span>
+              </div>
+              <p class="item-score__desc">给这部电影打了<span></span>分</p>
+            </div>
+            <div class="item-detail__content">
+              <p></p>
+            </div>
+            <div class="item-detail__footer">
+              <span class="item-detail__time">03-22</span>
+              <div class="pull-right">
+                <a href="#" class="link comment-like">
+                  <i class="icon icon-approve"></i>
+                  <span>32423</span>
+                </a>
+                <a href="#" class="link comment-reply">
+                  <i class="icon icon-comment"></i>
+                  <span>2121</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </li> -->
+      </ul>
+    </section>
     <!-- toast -->
     <div id="toast">
       <div class="weui-mask_transparent"></div>
@@ -114,6 +263,16 @@
           $('.address-time .time').html(res.data.time)
           $('.data').html(res.data.date)
           $('.text-expander_content p').html(res.data.desc) 
+          $('#ranking span').html(res.data.booking.ranking)
+          $('#bookingWeek span').html(res.data.booking.bookingWeek)
+          $('#bookingTotal span').html(res.data.booking.bookingTotal)
+          celebrity(res.data.person)
+          // 剧照
+          photo(res.data.pictures)
+          // 评论 
+          comment(res.data.commentNum)
+          // 精选
+          chonse(res.data.comment)
 
 
         }
@@ -155,6 +314,81 @@
           $('.icon-chevron_down').removeClass('up')
           }
       })
+         // 演员表
+         function celebrity(arr) {
+        for (let n of arr) {
+          $('.movie-celebrities').append(`<li>
+          <a href="#" class="link">
+            <div class="movie-celebrities__pic">
+              <img src="${n.avatal}"
+                alt="">
+            </div>
+            <span class="movie-celebrities-nick">${n.name}</span>
+            <span class="movie-celebrities-roles">${n.sort}</span>
+          </a>
+        </li>`)
+        }
+      }
+
+      // 剧照
+      function photo(array) {
+        for (let m of array) {
+          $('.movie-photo__lists').append(`<li class="stage-img-container">
+          <a href="#" class="link">
+            <div class="movie-celebrities__pic">
+              <img src="${m}"
+                alt="">
+            </div>
+          </a>
+        </li>`)
+        }
+      }
+      // 评论
+      function comment(e) {
+        $('#good').html(e.good)
+        $('#bad').html(e.bad)
+        $('#dy').html(e.dy)
+        $('#bought').html(e.bought)
+        $('#author').html(e.author)
+        $('#sameCity').html(e.sameCity)
+      }
+      // 精选
+      function chonse(str) {
+        for (let i of str) {
+          $('#chosen-comment').append(`<li class="chosen-comment__item">
+          <div class="item-avatal">
+            <img src="${i.avatal}" alt="">
+          </div>
+          <div class="item-detail">
+            <div class="item-detail__hd">
+              <div>
+                <span class="nick-name">${i.nickName}</span>
+                <span class="lever">
+                  <img src="${i.lever}" alt="">
+                </span>
+              </div>
+              <p class="item-score__desc">给这部电影打了<span>${i.grade}</span>分</p>
+            </div>
+            <div class="item-detail__content">
+              <p>${i.detail}</p>
+            </div>
+            <div class="item-detail__footer">
+              <span class="item-detail__time">${i.date}</span>
+              <div class="pull-right">
+                <a href="#" class="link comment-like">
+                  <i class="icon icon-approve"></i>
+                  <span>${i.like}</span>
+                </a>
+                <a href="#" class="link comment-reply">
+                  <i class="icon icon-comment"></i>
+                  <span>${i.reply}</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </li>`)
+        }
+      }
       
     })()
   </script>
