--- a/JS-Ajax/index.html
+++ b/JS-Ajax/index.html
@@ -68,6 +68,9 @@
          .then(xq)
          .then(marry)
          .then(a)
+         .catch(err => {
+             console.log(err)
+         })
            
          
     //     })
