--- a/JS/pub-sub/index.html
+++ b/JS/pub-sub/index.html
@@ -39,13 +39,13 @@
        }
     }
     ys.listen(function (msg) {
-        console.log(`想听${this.name} ${msg}`);
+        console.log(`想${this.name} ${msg}`);
     })
     ys.listen(function (msg) {
-        console.log(`想看${this.name} ${msg}`);
+        console.log(`想${this.name} ${msg}`);
     })
     ys.listen(function (msg) {
-        console.log(`想和${this.name} ${msg}`);
+        console.log(`想${this.name} ${msg}`);
     })
     // console.log(ys.peoplelist.length)
     // console.log(ys.trigger)
