react的浅学习，以及动态渲染.vue的组件

--- a/interview/q7/index.html
+++ b/interview/q7/index.html
@@ -54,7 +54,7 @@
     //Object.prototype.toString会取得对象的一个内部属性，然后依据这个内部属性，返回一个'[object Array]'
     // 然后，call将作用域放到这个[object Array]里面
     // 
-    console.log(Object.prototype.toString.call())
+    console.log(Object.prototype.toString.call(b))
     </script>
 </body>
 </html>
