全栈项目的一点点进展

--- a/interview/q4/index.html
+++ b/interview/q4/index.html
@@ -9,26 +9,26 @@
 <body>
     <!-- 闭包 -->
     <script>
-    // function foo () {
-    //     var a = 2
-    //      function fn () {
-    //         console.log(a)
-    //         // let b = a
-    //         // return b
-    //     }
-    //     return fn()
-    // }
-    // foo()
-
-    var a = []
-    for(var i = 0; i < 10; i++) {
-        a[i] = (function(j) {
-            return function() {
-                console.log(j)
-            }
-        })(i)
+    function foo () {
+        var a = 2
+         function fn () {
+            console.log(a)
+            // let b = a
+            // return b
+        }
+        return fn()
     }
-    a[6]()
+    foo()
+
+    // var a = []
+    // for(var i = 0; i < 10; i++) {
+    //     a[i] = (function(j) {
+    //         return function() {
+    //             console.log(j)
+    //         }
+    //     })(i)
+    // }
+    // a[6]()
  
         
     </script>
